tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/set_host_header_in_destination/tproxy/to_tproxy/_test_context/VirtualService.3231558925.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - tproxy
  http:
  - route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: my-custom-authority
